--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@mui/system": "^5.13.2",
         "@mui/x-data-grid": "^5.0.12",
         "@mui/x-date-pickers": "^5.0.12",
+        "@next/eslint-plugin-next": "^14.0.3",
         "dayjs": "^1.11.7",
         "next": "^14.0.3",
         "react": "18.2.0",
